--- a/python/src/SobolSimulationAlgorithm_doc.i.in
+++ b/python/src/SobolSimulationAlgorithm_doc.i.in
@@ -4,8 +4,7 @@
 The algorithm uses sampling of the distribution of the random vector :math:`\vect{X}` through the model :math:`f`
 to iteratively estimate the Sobol indices.
 
-At each iteration a fixed number :math:`N = blockSize * (d + 2)` of replications inputs is generated.
-These inputs are evaluated by blocks of size :math:`batchSize` through the model :math:`f`.
+At each iteration a Sobol' experiment is generated and evaluated by blocks through the model :math:`f`.
 Then the distribution of the indices (first and total order) is computed on this current replication sample.
 At the end of each iteration we update the global distribution of the indices.
 
@@ -43,9 +42,24 @@ is smaller than :math:`\epsilon`:
 
 for all :math:`j = 1, \ldots, n_X`.
 
+The total number of samples evaluated by the algorithm is :math:`n_{iter} \times N \times (2 + n_X)` (no second order indices) where
+
+- :math:`n_{iter}` is the actual number of outer iterations, as caped by :meth:`setMaximumOuterSampling`
+- :math:`N` is the internal size of the Sobol' experiment, as set by :meth:`setExperimentSize`
+- :math:`n_X` is the input dimension
+
+That is why unlike other simulation algorithms the total of evaluations is not equal to
+the product of iterations (obtained by `getOuterSampling` from the result) by the block size (:meth:`getBlockSize`).
+
+This class makes use of the following :class:`~openturns.ResourceMap` entries:
+
+- `SobolSimulationAlgorithm-DefaultIndexQuantileLevel`: default float value for the confidence level :math:`\alpha`
+- `SobolSimulationAlgorithm-DefaultIndexQuantileEpsilon`: default float value for the confidence length :math:`\epsilon`
+- `SobolSimulationAlgorithm-DefaultExperimentSize`: default integer value for :math:`N`
+
 See also
 --------
-SobolSimulationResult
+SobolSimulationResult, SobolIndicesExperiment, SobolIndicesAlgorithm
 
 Examples
 --------
@@ -56,11 +70,11 @@ Examples
 >>> estimator = ot.SaltelliSensitivityAlgorithm()
 >>> estimator.setUseAsymptoticDistribution(True)
 >>> algo = ot.SobolSimulationAlgorithm(distribution, model, estimator)
->>> algo.setMaximumOuterSampling(25) # number of iterations
->>> algo.setBlockSize(100) # size of Sobol experiment at each iteration
->>> algo.setBatchSize(4) # number of points evaluated simultaneously
->>> algo.setIndexQuantileLevel(0.05) # alpha
->>> algo.setIndexQuantileEpsilon(1e-2) # epsilon
+>>> algo.setMaximumOuterSampling(25)  # maximum number of iterations
+>>> algo.setExperimentSize(100)  # size of Sobol experiment at each iteration
+>>> algo.setBlockSize(4) # number of points evaluated simultaneously
+>>> algo.setIndexQuantileLevel(0.05)  # alpha
+>>> algo.setIndexQuantileEpsilon(1e-2)  # epsilon
 >>> algo.run()
 >>> result = algo.getResult()
 >>> fo = result.getFirstOrderIndicesEstimate()
@@ -174,23 +188,25 @@ estimator : :class:`~openturns.SobolIndicesAlgorithm`
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::SobolSimulationAlgorithm::setBatchSize
-"Accessor to the batch size.
+%feature("docstring") OT::SobolSimulationAlgorithm::setExperimentSize
+"Accessor to the experiment size.
 
 Parameters
 ----------
-batchSize : int
-    Number of points evaluated simultaneously."
+size : int
+    Internal size :math:`N` of the Sobol design of experiment.
+    See :class:`~openturns.SobolIndicesExperiment`"
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::SobolSimulationAlgorithm::getBatchSize
-"Accessor to the batch size.
+%feature("docstring") OT::SobolSimulationAlgorithm::getExperimentSize
+"Accessor to the experiment size.
 
 Returns
 -------
-batchSize : int
-    Number of points evaluated simultaneously."
+size : int
+    Internal size :math:`N` of the Sobol design of experiment.
+    See :class:`~openturns.SobolIndicesExperiment`"
 
 // ---------------------------------------------------------------------
 
