--- a/python/src/IteratedQuadrature_doc.i.in
+++ b/python/src/IteratedQuadrature_doc.i.in
@@ -50,8 +50,8 @@ Evaluate the integral with high precision:
 Evaluate the integral with the default IteratedQuadrature algorithm:
 
 >>> Idefault = ot.IteratedQuadrature().integrate(f, a, b, l, u)
->>> err = abs(100.0*(1.0-Idefault[0]/Iref[0]))
->>> print(err)
+>>> relative_error = abs(1.0-Idefault[0]/Iref[0])
+>>> print(relative_error)
 4.6...e-10"
 
 // ---------------------------------------------------------------------
